--- a/App/src/main/res/layout/list_per.xml
+++ b/App/src/main/res/layout/list_per.xml
@@ -42,12 +42,12 @@
 
 
                     <ImageView
+                        android:id="@+id/img_sex_lp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
-                        android:src="@mipmap/man"
                         android:layout_gravity="center"
-                        />
+                        android:src="@mipmap/man" />
 
 
                     <TextView
