--- a/App/src/main/res/layout/activity_com_del.xml
+++ b/App/src/main/res/layout/activity_com_del.xml
@@ -3,57 +3,52 @@
     android:id="@+id/activity_com_detial"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:orientation="vertical">
 
 
-    <include layout="@layout/title_bar_child"/>
+    <include layout="@layout/title_bar_child" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:orientation="vertical"
-        android:background="@color/wirte">
+        android:background="@color/wirte"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/layout_padding"
-            >
+            android:padding="@dimen/layout_padding">
+
             <ImageView
                 android:id="@+id/img_pic_cd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/com_icon"
                 android:layout_gravity="center"
-                />
-
+                android:src="@mipmap/com_icon" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/layout_padding"
                 android:orientation="vertical"
-                >
+                android:padding="@dimen/layout_padding">
 
                 <TextView
                     android:id="@+id/txt_name_cd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="顺丰速运"
-                    android:textColor="@color/black"
-                    />
+                    android:textColor="@color/black" />
 
                 <TextView
                     android:id="@+id/txt_com_cd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="顺丰控股(集团)股份有限公司"
                     android:layout_below="@+id/txt_name_three"
                     android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    />
+                    android:text="顺丰控股(集团)股份有限公司" />
 
             </LinearLayout>
 
@@ -62,31 +57,27 @@
         <LinearLayout
             style="@style/horizontal_black_line_small"
             android:layout_below="@+id/txt_name_pq"
-            android:layout_marginTop="@dimen/line_large"
-            />
+            android:layout_marginTop="@dimen/line_large" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/layout_padding"
-            >
+            android:padding="@dimen/layout_padding">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:src="@mipmap/location"
-                />
+                android:src="@mipmap/location" />
 
             <TextView
                 android:id="@+id/txt_address_cd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="广东省深圳市福田区福华路万基商务大厦"
                 android:layout_marginLeft="@dimen/layout_padding_small"
-                android:textColor="@color/black"
-                />
+                android:text="广东省深圳市福田区福华路万基商务大厦"
+                android:textColor="@color/black" />
 
         </LinearLayout>
 
@@ -96,51 +87,45 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/wirte"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
-        >
+        android:background="@color/wirte"
+        android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/layout_padding"
-            >
+            android:padding="@dimen/layout_padding">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/responsible_Per"
                 android:layout_alignParentLeft="true"
-                />
+                android:text="@string/responsible_Per" />
 
             <TextView
                 android:id="@+id/txt_responsible_Per_cd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="张客气"
-                />
+                android:text="张客气" />
 
             <LinearLayout
                 style="@style/horizontal_black_line_small"
                 android:layout_below="@+id/txt_responsible_Per_cd"
-                android:layout_marginTop="@dimen/line_large"
-                />
+                android:layout_marginTop="@dimen/line_large" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/layout_padding"
-            >
+            android:padding="@dimen/layout_padding">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/responsible_tel"
                 android:layout_alignParentLeft="true"
-                />
+                android:text="@string/responsible_tel" />
 
             <TextView
                 android:id="@+id/txt_responsible_tel_cd"
@@ -148,92 +133,81 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text="132-3948--4321"
-                android:textColor="@color/main"
-                />
+                android:textColor="@color/main" />
 
             <LinearLayout
                 style="@style/horizontal_black_line_small"
                 android:layout_below="@+id/txt_responsible_tel_cd"
-                android:layout_marginTop="@dimen/line_large"
-                />
+                android:layout_marginTop="@dimen/line_large" />
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/layout_padding"
-            >
+            android:padding="@dimen/layout_padding">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/employee"
                 android:layout_alignParentLeft="true"
-                />
+                android:text="@string/employee" />
 
             <TextView
                 android:id="@+id/txt_employee_count_cd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="2333"
-                />
+                android:text="2333" />
 
             <LinearLayout
                 style="@style/horizontal_black_line_small"
                 android:layout_below="@+id/txt_employee_count_cd"
-                android:layout_marginTop="@dimen/line_large"
-                />
+                android:layout_marginTop="@dimen/line_large" />
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/layout_padding"
-            >
+            android:padding="@dimen/layout_padding">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/get_count"
                 android:layout_alignParentLeft="true"
-                />
+                android:text="@string/get_count" />
 
             <TextView
                 android:id="@+id/txt_get_count_cd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="2343434"
-                />
+                android:text="2343434" />
 
             <LinearLayout
                 style="@style/horizontal_black_line_small"
                 android:layout_below="@+id/txt_get_count_cd"
-                android:layout_marginTop="@dimen/line_large"
-                />
+                android:layout_marginTop="@dimen/line_large" />
+
+
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/layout_padding"
-            >
+            android:padding="@dimen/layout_padding">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/post_count"
                 android:layout_alignParentLeft="true"
-                />
+                android:text="@string/post_count" />
 
             <TextView
                 android:id="@+id/txt_post_count_cd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="14234333"
-                />
+                android:text="2343434" />
 
         </RelativeLayout>
 
@@ -244,7 +218,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:padding="15dp"
-        />
+        android:padding="15dp" />
 
 </LinearLayout>
