--- a/App/src/main/res/layout/fragment_two.xml
+++ b/App/src/main/res/layout/fragment_two.xml
@@ -13,20 +13,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@color/wirte"
-            android:paddingTop="@dimen/activity_horizontal_margin"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/two"
-                android:layout_centerInParent="true"
-                android:textSize="@dimen/title_size"
-                />
-        </RelativeLayout>
 
         <TextView
             android:id="@+id/txt_size"
@@ -35,6 +21,7 @@
             android:padding="@dimen/activity_horizontal_margin"
             android:textColor="@color/text_c"
             android:background="@color/background"
+            android:visibility="gone"
             />
 
         <com.github.jdsjlzx.recyclerview.LRecyclerView
@@ -43,8 +30,6 @@
             android:layout_height="fill_parent"
             android:background="@mipmap/nodata"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-
 
     </LinearLayout>
 
