--- a/App/src/main/res/layout/list_log.xml
+++ b/App/src/main/res/layout/list_log.xml
@@ -1,53 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/wirte"
+    android:background="@mipmap/log_bg"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/layout_padding"
-        android:orientation="horizontal"
-        >
-
-
-
-        <RelativeLayout
+    android:layout_height="wrap_content"
+    android:paddingLeft="@dimen/layout_padding_small"
+    android:paddingRight="@dimen/layout_padding_small"
+    android:gravity="center"
+    >
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/layout_padding"
-            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/layout_padding_small"
+            android:paddingRight="@dimen/layout_padding_small"
             >
 
             <TextView
-                android:id="@+id/txt_user_llog"
+                android:id="@+id/txt_com_llog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="发现可疑人物，寄送物品既然不让打开，也不刘身份信息"
-                android:textColor="@color/black"
+                android:text="发现可疑人物，，也不刘身份信息"
+                android:textColor="@color/main_gray"
+                android:drawableLeft="@mipmap/com_log"
+                android:drawablePadding="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="@dimen/line_large"
+
+                />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/fengefu"
+                android:layout_marginTop="@dimen/line_large"
                 />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/activity_horizontal_marginsx"
                 android:orientation="horizontal"
+                android:layout_marginTop="@dimen/layout_padding_small"
                 >
                 <TextView
                     android:id="@+id/txt_com_lcllog"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="陕西全峰快递有限公司"
+                    android:text="管辖机构"
                     android:layout_below="@+id/txt_name_three"
                     android:layout_weight="1"
                     android:textSize="@dimen/edit_text"
                     />
 
                 <TextView
-                    android:id="@+id/txt_date_lcllog"
+                    android:id="@+id/txt_org_lcllog"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="张三丰/2天前"
+                    android:textSize="@dimen/edit_text"
+                    />
+
+            </LinearLayout><LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/layout_padding_small"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="检查日期"
+                    android:layout_below="@+id/txt_name_three"
+                    android:layout_weight="1"
+                    android:textSize="@dimen/edit_text"
+                    />
+
+                <TextView
+                    android:id="@+id/txt_date_listlog"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="张三丰/2天前"
+                    android:textSize="@dimen/edit_text"
+                    />
+
+            </LinearLayout><LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/layout_padding_small"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="检查地址"
+                    android:layout_below="@+id/txt_name_three"
+                    android:layout_weight="1"
+                    android:textSize="@dimen/edit_text"
+                    />
+
+                <TextView
+                    android:id="@+id/txt_add_listlog"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="张三丰/2天前"
@@ -58,19 +108,8 @@
 
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
-        <ImageView
-            android:id="@+id/img_pic_lcl"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@mipmap/ic_launcher"
-            android:layout_gravity="center"
-            />
 
-    </LinearLayout>
-
-    <LinearLayout
-        style="@style/horizontal_list_line_bag" />
 
 </LinearLayout>
