--- a/App/src/main/res/values/colors.xml
+++ b/App/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="color_00">#3e3e3e3e</color>
     <color name="main_gray">#8394fe</color>
     <color name="top_bg_color">#FFF</color>
+    <color name="menudialog_divider_color">#ededed</color>
+    <color name="result_view">#b0000000</color>
+    <color name="menudialog_bg_gray">#f5f5f5</color>
 
 
 </resources>
