--- a/App/src/main/res/values/dimens.xml
+++ b/App/src/main/res/values/dimens.xml
@@ -21,4 +21,5 @@
     <dimen name="title_size">18sp</dimen>
     <dimen name="list_line">10dp</dimen>
     <dimen name="default_divider_padding">4dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
