--- a/App/src/main/res/values/styles.xml
+++ b/App/src/main/res/values/styles.xml
@@ -9,7 +9,6 @@
     </style>
 
 
-
     <style name="horizontal_black_line_small_login">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/line_small</item>
@@ -42,13 +41,12 @@
 
 
     <style name="beautiful_dialog" parent="android:style/Theme.Dialog">
-    <item name="android:windowFrame">@null</item>
-    <item name="android:windowNoTitle">true</item>
-    <item name="android:windowBackground">@drawable/transpant_bg</item>
-    <item name="android:windowIsFloating">true</item>
-    <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@drawable/transpant_bg</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
-
 
 
     <style name="horizontal_black_line">
@@ -58,7 +56,9 @@
         <item name="android:background">@color/background</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
 </resources>
