--- a/App/src/main/res/layout/fragment_three.xml
+++ b/App/src/main/res/layout/fragment_three.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@color/background"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_staff_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/data"
+            android:text="联合检查"
             android:layout_centerInParent="true"
             android:textSize="@dimen/title_size"
             />
@@ -23,103 +23,23 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:orientation="vertical"
-        android:background="@color/wirte"
-        >
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/layout_padding"
-            >
-
-            <TextView
-                android:id="@+id/txt_name_three"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/org_name"
-                android:layout_alignParentLeft="true"
-
-                />
-
-            <EditText
-                android:id="@+id/txt_org_three"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/title_size"
-                android:layout_below="@+id/txt_name_three"
-                android:textColor="@color/black"
-                android:layout_marginTop="@dimen/activity_horizontal_margins"
-                android:background="@null"
-                android:hint="请选择管辖机构"
-                android:focusable="false"
-                />
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/wirte"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        >
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/layout_padding"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/start_time"
-                android:layout_alignParentLeft="true"
-
-                />
-
-            <TextView
-                android:id="@+id/txt_date_three"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:drawableRight="@mipmap/go"
-                />
-            <LinearLayout
-                style="@style/horizontal_black_line_small"
-                android:layout_below="@+id/txt_date_three"
-                android:layout_marginTop="@dimen/line_large"
-                />
-        </RelativeLayout>
-
-
-
-    </LinearLayout>
-
-
-
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        />
+        android:orientation="vertical"
+        >
 
-    <Button
-        android:id="@+id/bt_query_three"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="36dp"
-        android:background="@drawable/bg_button_selector"
-        android:text="完成"
-        android:textColor="@color/wirte"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
 
-        />
+
+        <com.github.jdsjlzx.recyclerview.LRecyclerView
+            android:id="@+id/list_recycleview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@mipmap/nodata"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    </LinearLayout>
+
+
+
 
 
 
