--- a/App/src/main/res/layout/activity_per_del.xml
+++ b/App/src/main/res/layout/activity_per_del.xml
@@ -13,12 +13,10 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-
             >
 
             <LinearLayout
@@ -27,6 +25,7 @@
                 android:orientation="vertical"
                 android:background="@color/wirte"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:layout_weight="1"
                 >
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -243,10 +242,6 @@
         </LinearLayout>
 
     </ScrollView>
-
-
-
-
 
 
 </LinearLayout>
