--- a/App/src/main/res/layout/list_log_bill.xml
+++ b/App/src/main/res/layout/list_log_bill.xml
@@ -5,8 +5,8 @@
     android:background="@mipmap/log_bg"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/layout_padding_small"
-    android:paddingRight="@dimen/layout_padding_small">
+    android:padding="10dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
