--- a/App/src/main/res/layout/activity_joint_add.xml
+++ b/App/src/main/res/layout/activity_joint_add.xml
@@ -43,6 +43,7 @@
                     android:focusable="false"
                     android:gravity="right"
                     android:hint="请选择企业名称..."
+                    android:longClickable="false"
                     android:textSize="@dimen/edit_text" />
 
 
@@ -81,6 +82,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="right"
+                android:maxLength="30"
                 android:hint="请输入联查机构..."
                 android:textSize="@dimen/edit_text" />
 
@@ -120,6 +122,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:focusable="false"
+                android:longClickable="false"
                 android:gravity="right"
                 android:hint="请选择日期..."
                 android:textSize="@dimen/edit_text" />
@@ -160,6 +163,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="right"
+                android:maxLength="30"
                 android:hint="请输入联查人员..."
                 android:textSize="@dimen/edit_text" />
 
@@ -200,13 +204,15 @@
                 <EditText
                     android:id="@+id/txt_content_add_joint"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70dp"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
                     android:background="@null"
                     android:gravity="right"
                     android:hint="请输入联查事项..."
-                    android:textSize="@dimen/edit_text" />
+                    android:textSize="@dimen/edit_text"
+                    android:maxLength="30"
+                    />
 
 
                 <ImageView
@@ -247,12 +253,13 @@
                 <EditText
                     android:id="@+id/txt_question_add_joint"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70dp"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
                     android:background="@null"
                     android:gravity="right"
                     android:hint="请输入问题..."
+                    android:maxLength="80"
                     android:textSize="@dimen/edit_text" />
 
 
@@ -295,12 +302,13 @@
                 <EditText
                     android:id="@+id/txt_result_add_joint"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70dp"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
                     android:background="@null"
                     android:gravity="right"
                     android:hint="请输入结果..."
+                    android:maxLength="80"
                     android:textSize="@dimen/edit_text" />
 
 
