--- a/App/src/main/res/layout/activity_log_add.xml
+++ b/App/src/main/res/layout/activity_log_add.xml
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:drawableRight="@mipmap/must_write"
                     android:gravity="center"
-                    android:text="@string/com" />
+                    android:text="企业" />
 
                 <EditText
                     android:id="@+id/txt_com_logadd"
@@ -41,6 +41,7 @@
                     android:focusable="false"
                     android:gravity="right"
                     android:hint="请选择企业..."
+                    android:longClickable="false"
                     android:textSize="@dimen/edit_text" />
 
 
@@ -51,8 +52,7 @@
                     android:layout_gravity="center"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:src="@mipmap/delete_edit"
-                    android:visibility="gone"
-                    />
+                    android:visibility="gone" />
 
             </LinearLayout>
 
@@ -80,12 +80,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
                     android:background="@null"
                     android:focusable="false"
                     android:gravity="right"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-
+                    android:longClickable="false"
                     android:hint="请选择管辖机构..."
                     android:textSize="@dimen/edit_text" />
 
@@ -94,10 +94,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:visibility="gone"
-
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:src="@mipmap/delete_edit" />
+
+                    android:src="@mipmap/delete_edit"
+                    android:visibility="gone" />
 
 
             </LinearLayout>
@@ -127,12 +127,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
                     android:background="@null"
                     android:gravity="right"
                     android:hint="请输入姓名..."
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-
+                    android:maxLength="6"
                     android:textSize="@dimen/edit_text" />
 
                 <ImageView
@@ -140,9 +140,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:visibility="gone"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:src="@mipmap/delete_edit" />
+                    android:src="@mipmap/delete_edit"
+                    android:visibility="gone" />
 
 
             </LinearLayout>
@@ -169,12 +169,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
                     android:background="@null"
                     android:gravity="right"
                     android:hint="请输入负责人..."
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-
+                    android:maxLength="6"
                     android:textSize="@dimen/edit_text" />
 
                 <ImageView
@@ -182,9 +182,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:visibility="gone"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:src="@mipmap/delete_edit" />
+                    android:src="@mipmap/delete_edit"
+                    android:visibility="gone" />
 
 
             </LinearLayout>
@@ -198,13 +198,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/layout_padding">
+                android:layout_marginBottom="3dp"
+                android:layout_marginLeft="@dimen/layout_padding"
+                android:layout_marginTop="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
-                    android:drawableRight="@mipmap/must_write"
                     android:gravity="center"
                     android:text="职务" />
 
@@ -213,12 +214,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
                     android:background="@null"
-                    android:gravity="right"
+                    android:gravity="right|center"
                     android:hint="请输入职务..."
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-
+                    android:maxLength="60"
                     android:textSize="@dimen/edit_text" />
 
                 <ImageView
@@ -226,9 +227,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:visibility="gone"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:src="@mipmap/delete_edit" />
+                    android:src="@mipmap/delete_edit"
+                    android:visibility="gone" />
 
 
             </LinearLayout>
@@ -257,13 +258,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
                     android:background="@null"
                     android:focusable="false"
                     android:gravity="right"
+                    android:longClickable="false"
                     android:hint="请选择日期..."
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-
                     android:textSize="@dimen/edit_text" />
 
                 <ImageView
@@ -271,9 +272,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:visibility="gone"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:src="@mipmap/delete_edit" />
+                    android:src="@mipmap/delete_edit"
+                    android:visibility="gone" />
 
 
             </LinearLayout>
@@ -306,14 +307,13 @@
                     <EditText
                         android:id="@+id/edit_question_logadd"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="70dp"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                         android:layout_weight="1"
                         android:background="@null"
                         android:gravity="right"
-                        android:hint="请输入处理的结果..."
-                        android:maxEms="50"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-
+                        android:hint="请输入存在的问题..."
+                        android:maxLength="80"
                         android:textSize="@dimen/edit_text" />
 
 
@@ -322,9 +322,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:visibility="gone"
                         android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:src="@mipmap/delete_edit" />
+                        android:src="@mipmap/delete_edit"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
@@ -360,14 +360,13 @@
                     <EditText
                         android:id="@+id/edit_result_logadd"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="70dp"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                         android:layout_weight="1"
                         android:background="@null"
                         android:gravity="right"
-                        android:hint="请输入存在的问题..."
-                        android:maxEms="50"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-
+                        android:hint="请输入处理的结果..."
+                        android:maxLength="80"
                         android:textSize="@dimen/edit_text" />
 
 
@@ -376,9 +375,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:visibility="gone"
                         android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:src="@mipmap/delete_edit" />
+                        android:src="@mipmap/delete_edit"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
@@ -399,7 +398,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
-                    android:drawableRight="@mipmap/must_write"
                     android:gravity="center"
                     android:text="备注" />
 
@@ -412,13 +410,13 @@
                     <EditText
                         android:id="@+id/edit_remark_logadd"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="70dp"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                         android:layout_weight="1"
                         android:background="@null"
                         android:gravity="right"
                         android:hint="请输入..."
-                        android:maxEms="50"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
+                        android:maxLength="80"
                         android:textSize="@dimen/edit_text" />
 
                     <ImageView
@@ -426,9 +424,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:visibility="gone"
                         android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:src="@mipmap/delete_edit" />
+                        android:src="@mipmap/delete_edit"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
@@ -440,7 +438,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="36dp"
-                android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/activity_horizontal_margina"
                 android:background="@drawable/bg_button_selector"
                 android:text="完成"
                 android:textColor="@color/wirte" />
