--- a/App/src/main/res/layout/activity_org_one.xml
+++ b/App/src/main/res/layout/activity_org_one.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="支队"
+            android:text="派出所"
             android:gravity="center"
             />
 
