--- a/App/src/main/res/layout/activity_splash.xml
+++ b/App/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scaleType="fitXY"
-    android:src="@mipmap/icon" />
+    android:src="@mipmap/flash_pic" />
 
 
 
