--- a/App/src/main/res/layout/fragment_four.xml
+++ b/App/src/main/res/layout/fragment_four.xml
@@ -117,6 +117,7 @@
                 android:background="@null"
                 android:hint="请选择时间..."
                 android:textSize="@dimen/activity_horizontal_margin"
+                android:focusable="false"
                 />
 
 
