--- a/App/src/main/res/layout/fragment_three.xml
+++ b/App/src/main/res/layout/fragment_three.xml
@@ -21,6 +21,15 @@
             />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/txt_size"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:textColor="@color/text_c"
+        android:background="@color/background"
+        />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
