--- a/App/src/main/res/layout/list_log_com.xml
+++ b/App/src/main/res/layout/list_log_com.xml
@@ -4,8 +4,8 @@
     android:background="@mipmap/log_bg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/layout_padding_small"
-    android:paddingRight="@dimen/layout_padding_small"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:gravity="center"
     >
         <LinearLayout
@@ -15,6 +15,7 @@
             android:paddingLeft="@dimen/layout_padding_small"
             android:paddingRight="@dimen/layout_padding_small"
             android:paddingTop="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_horizontal_margin"
             >
 
             <TextView
