--- a/App/src/main/res/layout/activity_clue_del.xml
+++ b/App/src/main/res/layout/activity_clue_del.xml
@@ -83,6 +83,33 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:text="联系电话:    " />
+
+            <TextView
+                android:id="@+id/txt_tel_cld"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="" />
+
+            <LinearLayout
+                style="@style/horizontal_black_line_small"
+                android:layout_below="@+id/txt_tel_cld"
+                android:layout_marginTop="@dimen/line_large" />
+
+        </RelativeLayout>
+
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/layout_padding">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:text="企业名称:    " />
 
             <TextView
