--- a/App/src/main/res/layout/activity_login.xml
+++ b/App/src/main/res/layout/activity_login.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="@dimen/activity_horizontal_margin">
+        android:padding="@dimen/activity_horizontal_margin"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/txt_finished_login"
@@ -23,7 +24,34 @@
             android:layout_alignParentLeft="true"
             android:drawableLeft="@mipmap/finished_login" />
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center|right"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        >
 
+        <Spinner
+            android:id="@+id/sp_city_login"
+            android:layout_width="70dp"
+            android:entries="@array/city"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:layout_gravity="center"
+            android:maxEms="3"
+            />
+
+        <ImageView
+            android:id="@+id/ss"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/spanner"
+            android:layout_gravity="center"
+
+            />
+
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
