--- a/App/src/main/res/layout/activity_user.xml
+++ b/App/src/main/res/layout/activity_user.xml
@@ -132,6 +132,14 @@
 
 
         </LinearLayout>
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/qrcode"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            />
     </LinearLayout>
 
 </LinearLayout>
