--- a/App/src/main/res/layout/fragment_two.xml
+++ b/App/src/main/res/layout/fragment_two.xml
@@ -28,8 +28,14 @@
             android:id="@+id/list_recycleview"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="@mipmap/nodata"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+
+        <include
+            android:id="@+id/empty_view"
+            layout="@layout/empty_layout"
+            android:visibility="gone"/>
+
 
     </LinearLayout>
 
