--- a/App/src/main/res/layout/lrecycleview_layout.xml
+++ b/App/src/main/res/layout/lrecycleview_layout.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_staff_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
-    <include layout="@layout/title_bar_child"/>
+    <include layout="@layout/title_bar_child" />
 
     <TextView
         android:id="@+id/txt_size"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:textColor="@color/main"
         android:background="@color/wirte"
-        />
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:textColor="@color/main" />
 
     <com.github.jdsjlzx.recyclerview.LRecyclerView
         android:id="@+id/list_recycleview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@mipmap/nodata"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <include
+        android:id="@+id/empty_view"
+        layout="@layout/empty_layout"
+        android:visibility="gone" />
 
 
 </LinearLayout>
